# Audio_Project_S2S

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
src/: math_operations.py
src/tests/: test_math_operations.py
